--- a/src/Style/Order.css
+++ b/src/Style/Order.css
@@ -234,8 +234,10 @@ td {
     font-size: 20px;
     margin-top: -10%;
     margin-left: 20%;
+    font-family: 'Raleway';
 }
 .burgerdivpmenu{
+    font-family: 'Raleway';
     font-size: 20px;
     margin-top: 30%;
     margin-left: -25%;
